--- a/templates/committee.html
+++ b/templates/committee.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container">
         <header class="dashboard-header">
-            <h1><i class="fas fa-users"></i> Central Committee Dashboard</h1>
+            <h1><i class="fas fa-users"></i> Central Dashboard</h1>
         </header>
 
         <div class="search-container card">
